--- a/index.html
+++ b/index.html
@@ -12,8 +12,16 @@
     <body>
         <header id="header">
             <h1>Turistička agencija "Avanturist"</h1>
-            <nav>
-                <ul>
+
+            <nav class="drop_menu">
+                <button class="menu_button">
+                    <img
+                        class="menu_button"
+                        src="./multimedia/images/logo/menu_button_2.png"
+                        alt="Menu Button"
+                    />
+                </button>
+                <ul class="drop_menu-content">
                     <li><a href="#o_nama">O NAMA</a></li>
                     <li><a href="#djelatnosti">NAŠE DJELATNOSTI</a></li>
                     <li><a href="#kontakt">KONTAKT</a></li>
